--- a/SocialWeave/Views/User/Register.cshtml
+++ b/SocialWeave/Views/User/Register.cshtml
@@ -48,7 +48,7 @@
                     <input type="tel" class="form-control bg-dark text-light" asp-for="PhoneNumber" id="PhoneNumber" placeholder="Optional">
                     <span class="text-danger" asp-validation-for="PhoneNumber"></span>
                 </div>
-                <div class="text-center">
+                <div class="text-center" style="margin-top: 60px">
                     <button type="submit" class="btn btn-outline-success w-50">Register</button>
                 </div>
                 <a class="w-50" asp-controller="User" asp-action="Login">Login</a>
