--- a/SocialWeave/Views/User/ForgotPassword.cshtml
+++ b/SocialWeave/Views/User/ForgotPassword.cshtml
@@ -4,13 +4,15 @@
     <div class="container">
         <main role="main" class="pb-3">
             <div class="login-container">
-                <h2>Forgot Password</h2>
+                <h2 class="text-center">Forgot Password</h2>
                 <div class="mb-3">
                     <label for="Email" class="form-label">Email: </label>
-                    <input type="email" class="form-control" asp-for="Email" id="Email" placeholder="Enter your email">
+                    <input type="email" class="form-control bg-dark text-light text-center" asp-for="Email" id="Email" placeholder="Enter your email">
                     <span class="text-danger" asp-validation-for="Email"></span>
                 </div>
-                <button type="submit" class="btn btn-primary w-50">Send Reset Email</button>
+                <div class="text-center" style="margin-top: 50px">
+                    <button type="submit" class="btn btn-outline-primary w-50">Send Reset Email</button>
+                </div>
                 <hr>
                 <a class="" asp-controller="User" asp-action="Login">Back to Login</a>
             </div>
