--- a/SocialWeave/Views/User/Login.cshtml
+++ b/SocialWeave/Views/User/Login.cshtml
@@ -36,7 +36,7 @@
                     </div>
                     <span class="text-danger" asp-validation-for="Password"></span>
                 </div>
-                <div class="text-center">
+                <div class="text-center" style="margin-top: 60px">
                     <button type="submit" class="btn btn-outline-primary w-50">Login</button>
                 </div>
                 <div class="d-flex justify-content-between">
@@ -54,7 +54,7 @@
 </form>
 
 <style> 
-    .strong-green {
+      .strong-green {
         background-color: #28a745;
         color: #fff;
     }
