--- a/SocialWeave/Views/Home/About.cshtml
+++ b/SocialWeave/Views/Home/About.cshtml
@@ -1,7 +1,9 @@
 ﻿<div class="container">
     <div class="info-text text-center"><h1><strong>Social Weave</strong></h1></div>
     <p>
-        <strong>Hello, my name is Pedro and I am the developer of this application, it was developed in ASP.NET, it is a 100% functional application, it focuses on the back-end, the data is manipulated through the code-first workflow, and contains connection to SQLServer!</strong>
+        <strong>
+            Hello! I'm Pedro, and I've developed Social Weave, a fully functional social network using ASP.NET. My goal was to create an engaging and intuitive social media experience for users. This application is 100% functional, with a focus on the back-end. I manipulate data using the code-first workflow and connect to SQLServer for storage.
+        </strong>
     </p>
 </div>
 <div class="custom-border text-center"></div>
