--- a/SocialWeave/Views/Post/CreatePost.cshtml
+++ b/SocialWeave/Views/Post/CreatePost.cshtml
@@ -51,6 +51,11 @@
         color: #FF5252;
     }
 
+    .strong-red {
+        background-color: #dc3545;
+        color: #fff;
+    }
+
     .info-text {
         background: linear-gradient(to right, #000080, #4B0082);
         -webkit-background-clip: text;
@@ -60,6 +65,12 @@
     }
 </style>
 
+@if(TempData["CreateError"] != null)
+{
+    <div class="alert alert-danger strong-red" role="alert">
+        @TempData["CreateError"]
+    </div>
+}
 
 <div class="container">
     <div class="custom-border" style="margin-top: 120px"></div>
