Refactored registration and deletion form

--- a/SocialWeave/Views/Home/Index.cshtml
+++ b/SocialWeave/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
-﻿@using SocialWeave.Extensions
-@using SocialWeave.Models.ConcreteClasses
-@using SocialWeave.Helpers;
+﻿@    using SocialWeave.Extensions
+@    using SocialWeave.Models.ConcreteClasses
+@    using SocialWeave.Helpers;
 
-@model IEnumerable<SocialWeave.Models.AbstractClasses.Post>
+@model IEnumerable<Post>
 
 @{
     var amountOfPostsHelper = ViewData["AmountOfPostsHelper"] as AmountOfPostsHelper;
