--- a/SocialWeave/Views/User/Login.cshtml
+++ b/SocialWeave/Views/User/Login.cshtml
@@ -25,19 +25,19 @@
                 <div class="custom-border"></div>
                 <div class="mb-3">
                     <label for="Email" class="form-label text-center">Email: </label>
-                    <input type="email" class="form-control bg-dark text-light" asp-for="Email" id="Email" placeholder="Enter your email">
+                    <input type="email" class="form-control bg-light text-dark" asp-for="Email" id="Email" placeholder="Enter your email">
                     <span class="text-danger" asp-validation-for="Email"></span>
                 </div>
                 <div class="mb-3">
                     <label for="Password" class="form-label">Password: </label>
                     <div class="input-group">
-                        <input type="password" class="form-control bg-dark text-light" asp-for="Password" id="Password" placeholder="Enter your password">
-                        <button class="btn btn-outline-secondary" type="button" id="togglePassword">Show</button>
+                        <input type="password" class="form-control bg-light text-dark" asp-for="Password" id="Password" placeholder="Enter your password">
+                        <button class="btn btn-secondary" type="button" id="togglePassword">Show</button>
                     </div>
                     <span class="text-danger" asp-validation-for="Password"></span>
                 </div>
                 <div class="text-center" style="margin-top: 60px">
-                    <button type="submit" class="btn btn-outline-primary w-50">Login</button>
+                    <button type="submit" class="btn btn-primary w-50">Login</button>
                 </div>
                 <div class="d-flex justify-content-between">
                     <div>
