--- a/SocialWeave/Views/User/ShowAdmirers.cshtml
+++ b/SocialWeave/Views/User/ShowAdmirers.cshtml
@@ -55,7 +55,7 @@
                 <div class="text-xxl-start">
                     <form asp-action="UserPageWithParams" asp-controller="User" method="get">
                         <input type="hidden" name="name" value="@user.Name" />
-                        <button type="submit" class="btn text-light"><i class="bi bi-person-circle me-2"></i>@user.Name.CutName()</button>
+                        <button type="submit" class="btn text-dark"><i class="bi bi-person-circle me-2"></i>@user.Name.CutName()</button>
                     </form>
                 </div>
             }
@@ -63,7 +63,7 @@
             {
                 <form asp-action="UserPageWithParams" asp-controller="User" method="get">
                     <input type="hidden" name="name" value="@user.Name" />
-                    <button class="btn text-light"><img src="data:image/png;base64,@(Convert.ToBase64String(user.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @user.Name.CutName()</button>
+                    <button class="btn text-dark"><img src="data:image/png;base64,@(Convert.ToBase64String(user.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @user.Name.CutName()</button>
                 </form>
             }
         </div>
