--- a/SocialWeave/Views/Home/Index.cshtml
+++ b/SocialWeave/Views/Home/Index.cshtml
@@ -78,7 +78,7 @@
                                 <div class="text-xxl-start">
                                     <form asp-action="UserPageWithParams" asp-controller="User" method="get">
                                         <input type="hidden" name="name" value="@post.User.Name" />
-                                        <button type="submit" class="btn text-light"><i class="bi bi-person-circle me-2"></i>@post.User.Name.CutName()</button>
+                                        <button type="submit" class="btn text-black"><i class="bi bi-person-circle me-2"></i>@post.User.Name.CutName()</button>
                                     </form>
                                 </div>
                             }
@@ -86,7 +86,7 @@
                             {
                                 <form asp-action="UserPageWithParams" asp-controller="User" method="get">
                                     <input type="hidden" name="name" value="@post.User.Name" />
-                                    <button class="btn text-light"><img src="data:image/png;base64,@(Convert.ToBase64String(post.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @post.User.Name.CutName()</button>
+                                    <button class="btn text-black"><img src="data:image/png;base64,@(Convert.ToBase64String(post.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @post.User.Name.CutName()</button>
                                 </form>
                             }
                             <div style="margin-right: 20px">
@@ -138,7 +138,7 @@
                                                             {
                                                                 <form asp-action="UserPageWithParams" asp-controller="User" method="get">
                                                                     <input type="hidden" name="name" value="@post.User.Name" />
-                                                                    <button class="btn text-light"><img src="data:image/png;base64,@(Convert.ToBase64String(comment.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @comment.User.Name.CutName():</button>
+                                                                    <button class="btn text-black"><img src="data:image/png;base64,@(Convert.ToBase64String(comment.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @comment.User.Name.CutName():</button>
                                                                     <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
                                                                 </form>
                                                             }
@@ -183,7 +183,7 @@
                                 <div class="text-xxl-start">
                                     <form asp-action="UserPageWithParams" asp-controller="User" method="get">
                                         <input type="hidden" name="name" value="@postImage.User.Name" />
-                                        <button type="submit"    class="btn text-light"><i class="bi bi-person-circle me-2"></i>@postImage.User.Name.CutName()</button>
+                                        <button type="submit" class="btn text-dark"><i class="bi bi-person-circle me-2"></i>@postImage.User.Name.CutName()</button>
                                     </form>
                                 </div>
                             }
@@ -191,7 +191,7 @@
                             {
                                 <form asp-action="UserPageWithParams" asp-controller="User" method="get">
                                     <input type="hidden" name="name" value="@post.User.Name" />
-                                    <button class="btn text-light"><img src="data:image/png;base64,@(Convert.ToBase64String(postImage.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @post.User.Name.CutName()</button>
+                                    <button class="btn text-dark"><img src="data:image/png;base64,@(Convert.ToBase64String(postImage.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @post.User.Name.CutName()</button>
                                 </form>
                             }
                             <div class="post-meta" style="margin-right: 20px">
@@ -246,7 +246,7 @@
                                                             {
                                                                 <form asp-action="UserPageWithParams" asp-controller="User" method="get">
                                                                     <input type="hidden" name="name" value="@post.User.Name" />
-                                                                    <button class="btn text-light"><img src="data:image/png;base64,@(Convert.ToBase64String(comment.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @comment.User.Name.CutName():</button>
+                                                                    <button class="btn text-dark"><img src="data:image/png;base64,@(Convert.ToBase64String(comment.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @comment.User.Name.CutName():</button>
                                                                     <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
                                                                 </form>
                                                             }
@@ -285,7 +285,7 @@
         </div>
         @if (title == null)
         {
-            <div class="text-center text-light">
+            <div class="text-center text-dark">
                 <form asp-controller="Home" asp-action="SetAmountOfPosts" method="post" id="more-posts-form">
                     <input type="hidden" name="Amount" value="@amountOfPostsHelper.Amount" />
                     <button type="submit" class="btn text-primary" id="more-posts-button"><i class="bi bi-arrow-down-short"></i>More posts</button>
