--- a/SocialWeave/Views/Post/ChoosePostType.cshtml
+++ b/SocialWeave/Views/Post/ChoosePostType.cshtml
@@ -10,19 +10,29 @@
        padding: 10px 20px;
        margin-bottom: 20px;
        }
+
+    .body {
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        padding-left: 5px;
+        padding-right: 5px;
+        margin-bottom: 80px;
+    }
 </style>
 
 
-<div class="container" style="background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 1)); padding: 5rem; border-radius: 1rem;">
+<div class="container body">
     <div class="mb-5 text-center">
         <div class="info-text"><h2 class="text-center mb-4">@ViewData["Title"]</h2></div>
     </div>
     <div class="d-flex justify-content-center">
         <div class="btn-group" role="group">
-            <a class="btn btn-outline-primary btn-lg text-light" style="width: 200px;" asp-controller="Post" asp-action="CreatePost">
+            <a class="btn btn-outline-primary btn-lg text-dark" style="width: 200px;" asp-controller="Post" asp-action="CreatePost">
                 <i class="bi bi-file-earmark-text-fill fs-1 me-2"></i><strong>Default Post</strong>
             </a>
-            <a class="btn btn-outline-primary btn-lg text-light" style="width: 200px;" asp-controller="Post" asp-action="CreatePostImage">
+            <a class="btn btn-outline-primary btn-lg text-dark" style="width: 200px;" asp-controller="Post" asp-action="CreatePostImage">
                 <i class="bi bi-file-earmark-richtext-fill fs-1 me-2"></i><strong>Image Post</strong>
             </a>
         </div>
