--- a/SocialWeave/Views/Post/CreateComment.cshtml
+++ b/SocialWeave/Views/Post/CreateComment.cshtml
@@ -18,13 +18,12 @@
     }
 
     .form-label {
-        color: #fff;
+        color: black;
     }
 
     .form-control {
         background-color: rgba(255, 255, 255, 0.2);
-        color: #fff;
-        border: none;
+        color: white border: none;
         border-radius: 10px;
         padding: 12px;
         margin-bottom: 20px;
@@ -48,12 +47,22 @@
     .text-danger {
         color: #FF5252;
     }
+
+    .body {
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        padding-left: 5px;
+        padding-right: 5px;
+        margin-bottom: 80px;
+    }
 </style>
 
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-6">
-            <div class="card p-4">
+            <div class="body p-4">
                 <h2 class="text-center mb-4">@ViewData["Title"]</h2>
                 <form asp-action="CreateComment" asp-controller="Post" method="post">
                     <input type="hidden" asp-for="PostId" />
