--- a/SocialWeave/Views/Search/PageOfSearch.cshtml
+++ b/SocialWeave/Views/Search/PageOfSearch.cshtml
@@ -92,8 +92,8 @@
 
     <div class="search-box">
         <form asp-action="Search" asp-controller="Search" method="GET">
-            <input type="text" name="query" class="search-input bg-black text-light" placeholder="Enter your search query...">
-            <button type="submit" class="search-button bg-black text-light"><i class="bi bi-search"></i></button>
+            <input type="text" name="query" class="search-input bg-light text-dark" placeholder="Enter your search query...">
+            <button type="submit" class="search-button bg-black text-primary"><i class="bi bi-search"></i></button>
         </form>
     </div>
     @if (Model != null)
@@ -115,7 +115,7 @@
                                 <div class="text-center">
                                     <form asp-action="UserPageWithParams" asp-controller="User" method="get">
                                         <input type="hidden" name="name" value="@user.Name" />
-                                        <button type="submit" class="btn text-light"><i class="bi bi-person-circle me-2"></i>@user.Name.CutName()</button>
+                                        <button type="submit" class="btn text-dark"><i class="bi bi-person-circle me-2"></i>@user.Name.CutName()</button>
                                     </form>
                                 </div>
                             }
@@ -123,7 +123,7 @@
                             {
                                 <form asp-action="UserPageWithParams" asp-controller="User" method="get">
                                     <input type="hidden" name="name" value="@user.Name" />
-                                    <button class="btn text-light"><img src="data:image/png;base64,@(Convert.ToBase64String(user.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @user.Name.CutName()</button>
+                                    <button class="btn text-dark"><img src="data:image/png;base64,@(Convert.ToBase64String(user.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @user.Name.CutName()</button>
                                 </form>
                             }
                         </div>
@@ -146,7 +146,7 @@
                                             <div class="text-xxl-start">
                                                 <form asp-action="UserPageWithParams" asp-controller="User" method="get">
                                                     <input type="hidden" name="name" value="@post.User.Name" />
-                                                    <button type="submit" class="btn text-light"><i class="bi bi-person-circle me-2"></i>@post.User.Name.CutName()</button>
+                                                    <button type="submit" class="btn text-dark"><i class="bi bi-person-circle me-2"></i>@post.User.Name.CutName()</button>
                                                 </form>
                                             </div>
                                         }
@@ -154,7 +154,7 @@
                                         {
                                             <form asp-action="UserPageWithParams" asp-controller="User" method="get">
                                                 <input type="hidden" name="name" value="@post.User.Name" />
-                                                <button class="btn text-light"><img src="data:image/png;base64,@(Convert.ToBase64String(post.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @post.User.Name.CutName()</button>
+                                                <button class="btn text-dark"><img src="data:image/png;base64,@(Convert.ToBase64String(post.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @post.User.Name.CutName()</button>
                                             </form>
                                         }
                                         <div style="margin-right: 20px">
@@ -206,7 +206,7 @@
                                                                         {
                                                                             <form asp-action="UserPageWithParams" asp-controller="User" method="get">
                                                                                 <input type="hidden" name="name" value="@post.User.Name" />
-                                                                                <button class="btn text-light"><img src="data:image/png;base64,@(Convert.ToBase64String(comment.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @comment.User.Name.CutName():</button>
+                                                                                <button class="btn text-dark"><img src="data:image/png;base64,@(Convert.ToBase64String(comment.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @comment.User.Name.CutName():</button>
                                                                                 <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
                                                                             </form>
                                                                         }
@@ -251,7 +251,7 @@
                                             <div class="text-xxl-start">
                                                 <form asp-action="UserPageWithParams" asp-controller="User" method="get">
                                                     <input type="hidden" name="name" value="@postImage.User.Name" />
-                                                    <button type="submit" class="btn text-light"><i class="bi bi-person-circle me-2"></i>@postImage.User.Name.CutName()</button>
+                                                    <button type="submit" class="btn text-dark"><i class="bi bi-person-circle me-2"></i>@postImage.User.Name.CutName()</button>
                                                 </form>
                                             </div>
                                         }
@@ -259,7 +259,7 @@
                                         {
                                             <form asp-action="UserPageWithParams" asp-controller="User" method="get">
                                                 <input type="hidden" name="name" value="@post.User.Name" />
-                                                <button class="btn text-light"><img src="data:image/png;base64,@(Convert.ToBase64String(postImage.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @post.User.Name.CutName()</button>
+                                                <button class="btn text-dark"><img src="data:image/png;base64,@(Convert.ToBase64String(postImage.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @post.User.Name.CutName()</button>
                                             </form>
                                         }
                                         <div class="post-meta" style="margin-right: 20px">
@@ -314,7 +314,7 @@
                                                                         {
                                                                             <form asp-action="UserPageWithParams" asp-controller="User" method="get">
                                                                                 <input type="hidden" name="name" value="@post.User.Name" />
-                                                                                <button class="btn text-light"><img src="data:image/png;base64,@(Convert.ToBase64String(comment.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @comment.User.Name.CutName():</button>
+                                                                                <button class="btn text-dark"><img src="data:image/png;base64,@(Convert.ToBase64String(comment.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @comment.User.Name.CutName():</button>
                                                                                 <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
                                                                             </form>
                                                                         }
